# Crawl_data

./: .env  README.md  book_crawl.py  main.py  pyproject.toml  web.py
scrapers/: article.py  book_crawl.py  job_web.py
tests/: test.py
