[project]
name = "crawl-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "dotenv-python>=0.0.1",
    "lxml>=6.1.1",
    "pip>=26.1.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "urljoin>=1.0.0",
]
